[package]
name = "soroban-spec-rust"
description = "Soroban contract spec utilities for generating Rust."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
stellar-xdr = { workspace = true, features = ["std", "serde"] }
soroban-spec = { workspace = true }
thiserror = "2.0.19"
syn = {version="3.0",features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
sha2 = "0.11.0"
prettyplease = "0.3.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
