[package]
name = "soroban-spec"
description = "Soroban contract spec utilities."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.67"

[dependencies]
stellar-xdr = { workspace = true, features = ["next", "std", "serde"] }
base64 = "0.13.0"
thiserror = "1.0.32"
syn = {version="1.0",features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.10.3"
darling = "0.14.1"
sha2 = "0.10.2"
wasmparser = "0.88.0"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"
prettyplease = "0.1.18"

[dev_dependencies]
pretty_assertions = "1.2.1"
