[package]
name = "soroban-spec"
description = "Soroban contract spec utilities."
homepage = "https://github.com/stellar/rs-soroban-sdk"
repository = "https://github.com/stellar/rs-soroban-sdk"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.69"

[dependencies]
stellar-xdr = { workspace = true, features = ["next", "std", "serde"] }
base64 = "0.13.0"
thiserror = "1.0.32"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.10.3"
darling = "0.20.0"
sha2 = "0.9.9"
wasmparser = "0.88.0"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"
prettyplease = "0.2.4"
include_dir = { version = "0.7.3", features = ["glob"] }
heck = "0.4.1"
assert_fs = "1.0.13"

[dev-dependencies]
pretty_assertions = "1.2.1"
