[package]
name = "test_liqpool"
version = "0.0.1"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stellar_contract_sdk = {path = "../stellar_contract_sdk"}
stellar_contract_sdk_macros = {path = "../stellar_contract_sdk_macros"}
