[package]
name = "example_add"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stellar-contract-host = { git = "https://github.com/stellar/rs-stellar-contract-host", rev = "129747a982bfbf61eef5443e0e35d2b7ba829e78" }
stellar-contract-sdk = {path = "../../sdk"}
