[package]
name = "example_add"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stellar-contract-host = { git = "https://github.com/stellar/rs-stellar-contract-host", rev = "c2be04d0e672d853b7a5426ce3c9172719415d12" }
stellar-contract-sdk = {path = "../../sdk"}
