[package]
name = "example_add"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stellar-contract-env = { git = "https://github.com/stellar/rs-stellar-contract-env", branch = "host-guest-env-reorg", features = ["host"] }
stellar-contract-sdk = {path = "../../sdk"}
